--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -49,7 +49,7 @@
    .featherlight-content .card { width:100% !important; background-color: #eee; !important; border:0 !important;}
    .featherlight-content .card:hover { opacity:1 !important; cursor:normal !important; }
 
-    .tooltip .name {font-size:1em;color:#333;margin-bottom:4px;}
+    .tooltip .name { font-size:1em; color:#333; margin-bottom:4px; width:150px; }
     .tooltip .mentalSwatch { font-size:.9em;color:#999 !important; background-color:#fff !important;font-weight:900; text-transform: uppercase;padding:0;border-radius:none;}
     
    .url { font-weight:900; padding-left:6px !important;}
