--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -36,7 +36,7 @@
    .card { position:relative;padding:10px; height:230px; width:450px; font-size:.7em; display:inline-block; vertical-align:top; background-color: #eee; margin-bottom:20px; margin-left: 20px;}
    .card div { padding:3px; }
    .card:hover { opacity:.5; cursor:pointer; }
-   .card .mentalSwatch { background-color:#fff !important; color:#b75b60 !important; padding:5px 8px 5px 8px; font-weight:900; text-transform: uppercase;border-radius:5px;display:table;}
+   .card .mentalSwatch { background-color:#fff !important; color:#999 !important; padding:5px 8px 5px 8px; font-weight:900; text-transform: uppercase;border-radius:5px;display:table;}
    
     .featherlight .featherlight-content {background-color: #eee; overflow-y:scroll;overflow-x:hidden;}
     .featherlight-content { width:750px; height:420px; }
