--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -55,8 +55,24 @@
    .url { font-weight:900; padding-left:6px !important;}
 
    .leftSide { float:left; width:63%; }
-   .rightSide { float:right; width:15%; border:0 solid #eee; width:150px !important; height:155px; overflow:hidden; background-size: cover;}
-   .photo, .photo img { max-width:100%; max-height:100%; vertical-align: middle;}
+   .rightSide {
+    float:right; 
+/*     width:15%; */
+    border:0 solid #eee; 
+    width:150px !important; 
+    height:155px; 
+    overflow:hidden; 
+/*    background-size: cover; */
+      }
+   .photo, .photo img { 
+    background-size: cover;
+    height:auto;
+    width: 100%;
+    overflow: hidden;
+    vertical-align: middle !important; 
+      }
+
+      
    .break { clear:both; }
    li { list-style:none !important; }
 /*   .url { display:none; }*/
