unfucked the search
Apparently, the document is never ready anymore.

--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -1366,7 +1366,7 @@ d3.helper.tooltip = function(accessor){
 for (var i=2000; i <= 2016; i++){ spitDots(i); }
 
 //SEARCH FILTER TABLE
-  $( document ).ready(function() {
+  // $( document ).ready(function() {
 
 
      $('#filter_box').keyup(function(i){
@@ -1395,7 +1395,7 @@ for (var i=2000; i <= 2016; i++){ spitDots(i); }
         $('.results').html(count);
       }
     });
-});
+// });
 
 $.getJSON('shapefiles/counties.json', function(counties) {
 
