link to methodology and mobile styles

--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -522,8 +522,9 @@ h1.mobile-hedline {
    .featherlight-content .url { display:block !important; }
    .featherlight-content .card { width:100% !important; background-color: #eee; !important; font-size:.9em; border:0 !important;}
    .featherlight-content .card:hover { opacity:1 !important; cursor:normal !important; }
-  
+  .featherlight-inner {background-color:green;margin:0 !important;}
 
+  
 .mobileNumbers {
     display:block;
     width:100%;
@@ -1245,7 +1246,7 @@ text-transform: uppercase;
 
 
 <div id="filter"><input type="search" id="filter_box" placeholder="Search list of all deaths by name, year or keyword"></input></div>
-<div id="method"><a href="http://www.startribune.com/how-we-counted-police-involved-deaths/380709141/" target="new_">READ METHODOLOGY</a></div>
+<div id="method"><a href="http://www.startribune.com/how-we-counted-police-involved-deaths/380709141/?preview=1" target="new_">READ METHODOLOGY</a></div>
 
 <div class="breaker"></div>
 
