--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -510,19 +510,22 @@ h1.mobile-hedline {
 } 
 .article-byline {width:100%;margin:0;}
   
+.project-nav {font-family: "Benton Sans",Helvetica,Arial,sans-serif; !important;} 
+  
+  
 /*OVERLAY  */
 
     .featherlight .featherlight-content {background-color: #eee; overflow-y:hidden;overflow-x:hidden;}
-    .featherlight-content { width:90%; height:450px; margin:0 auto;}
+    .featherlight-content { width:90%; height:auto; margin:0 auto;}
     
    .description_chatter, .url { display:none; }
-   .featherlight-content .description_chatter { display:block !important; }
+   .featherlight-content .description_chatter { display:block !important;}
    .featherlight-content .readmore { display:none; }
    .readmore { position:absolute;text-align:center; width: 100%; text-decoration:none; color:#b75b60; font-weight:bold; bottom:12px;}
    .featherlight-content .url { display:block !important; }
    .featherlight-content .card { width:100% !important; background-color: #eee; !important; font-size:.9em; border:0 !important;}
    .featherlight-content .card:hover { opacity:1 !important; cursor:normal !important; }
-  .featherlight-inner {background-color:green;margin:0 !important;}
+  .card.featherlight-inner {margin:0 !important;}
 
   
 .mobileNumbers {
