--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -506,9 +506,12 @@ h1.mobile-hedline {
     z-index: 2;
     text-shadow: none;
 } 
+  
+.article-subhead {font-size:15px; !important;line-height: 18px !importants;}  
+  
 .article-byline {width:100%;margin:0;}
   
-.nav-title.project-title {font-family: "Benton Sans",Helvetica,Arial,sans-serif; !important;} 
+.project-title {font-family: "Benton Sans",Helvetica,Arial,sans-serif; !important;} 
   
 .article-share { margin: 0 0 0 20px !important; width: 90%; max-width: 640px; height: 35px; clear: both;}
   
