--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -806,7 +806,7 @@ h1.mobile-hedline {
     </li>
     <li class="nav-block">
       
-<a href="#/" class="nav-title project-title">
+<a href="#/" class="nav-title project-title" style="font-family: 'Benton Sans',Helvetica,Arial,sans-serif; !important;">
   A CRY FOR HELP
   <div class="nav-indicator">
                                                                                       <div class="day arrow-down"></div>
