--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -758,7 +758,7 @@ h1.mobile-hedline {
     </li>
     <li class="nav-block">
       
-<a href="#/" class="nav-title project-title" style="font-family: 'Benton Sans'; !important;">
+<a href="#/" class="nav-title project-title"  style="font-family: Popular Medium;font-weight: normal;text-transform: uppercase;">
   A CRY FOR HELP
   <div class="nav-indicator">
                                                                                       <div class="day arrow-down"></div>
