--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -452,7 +452,7 @@
     #method { text-align:center; }
    }
    @media (max-width:605px) {
-    .featherlight .featherlight-content, .featherlight-content .card { {background-color: #eee; overflow-y:auto !important; overflow-x:hidden; }
+    .featherlight .featherlight-content, .featherlight-content .card {background-color: #eee; overflow-y:auto !important; overflow-x:hidden; }
     h1.mobile-hedline { display:block; position:relative; font-family: "Whitman Display",serif; font-weight: 400; color: #333; margin: 80px auto 0px auto; font-size: 3.2em; width: 100%; height: auto;text-align: center; line-height: 90%; padding: 0 10px; z-index: 2; text-shadow: none; } 
     .article-headline { display:none !important; } 
     #wrapper { width:434px; }
