--- a/20151117-police_deaths/index.html
+++ b/20151117-police_deaths/index.html
@@ -589,7 +589,7 @@ var st_page_obj = {"story_id":"380298861","title":"Fatal police encounters","pri
     </li>
           <li>
       <span class="project-link day-2">
-        <a href="" >          <span class="part-num">
+        <a href="http://www.startribune.com/374523171" >          <span class="part-num">
                           Part 2
                         :&nbsp;</span>the mother
         </a>                   <span class="coming-soon">
@@ -601,7 +601,7 @@ var st_page_obj = {"story_id":"380298861","title":"Fatal police encounters","pri
     </li>
           <li>
       <span class="project-link day-3">
-        <a href="" >          <span class="part-num">
+        <a href="http://www.startribune.com/374523401" >          <span class="part-num">
                           Part 3
                         :&nbsp;</span>the survivor
         </a>                   <span class="coming-soon">
@@ -614,11 +614,11 @@ var st_page_obj = {"story_id":"380298861","title":"Fatal police encounters","pri
           <li>
       <span class="project-link day-4">
         <a href="" >          <span class="part-num">
-                          Part 4
+                          DATA
                         :&nbsp;</span>fatal encounters
         </a>                   <span class="coming-soon">
             <span class="part-num">
-                              Part 4
+                              DATA
                             &nbsp;</span>fatal encounters
           </span>
               </span>
