--- a/404.html
+++ b/404.html
@@ -183,7 +183,7 @@
 
 <h2>404 PAGE NOT FOUND</h2>
 <p></p>
-<img src="img/striblab_min.png" width="250" />
+<img src="http://striblab.github.io/startribune_dataviz/img/striblab_min.png" width="250" />
 <p></p>
 <h2>You have travelled far, but it's all for naught. 
 <p></p>
