--- a/eat_duluth/index.html
+++ b/eat_duluth/index.html
@@ -198,7 +198,7 @@ d3.select("#table").selectAll(".card")
     $("#infobox #name, .pname").html(d.name);
     $("#infobox #address, .paddress").html(d.address + ", " + d.city + ", " + d.state);
     $("#infobox #phone, .pphone").html(d.phone);
-    $("#infobox #website .pwebsite").html("<a href='" + d.website + "' target='new_'>Website</a>");
+    $("#infobox #website, .pwebsite").html("<a href='" + d.website + "' target='new_'>Website</a>");
     $("#infobox #area, .parea").html(d.where);
     $("#infobox #hours, .phours").html(d.hours);
     if (d.cheap != "#") { $("#infobox #cheap, .pcheap").html("Cheap"); } else { $("#infobox #cheap, .pcheap").html(""); }
