--- a/20160703-ticket_scalping/index.html
+++ b/20160703-ticket_scalping/index.html
@@ -14,7 +14,7 @@
   <link href="../_common_resources/charts/c3-master/c3.css" rel="stylesheet" type="text/css">
   
   <style>
-   .section { text-align:center; font-family:"Benton Sans",Helvetica,Arial,sans-serif; padding:20px; border-bottom:solid 1px #ddd; clear:both; height:auto; }
+   .section { text-align:center; font-family:"Benton Sans",Helvetica,Arial,sans-serif; padding:20px; border-bottom:solid 1px #ddd; clear:both; height:auto; display:inline-block; width:48%; }
    .title { font-size:1.5em; font-weight:bold; }
    .icon img { width:80px; height:80px; text-align:center; }
    .seating, .infobox { float:left; width:48%; text-align:center; }
@@ -53,9 +53,9 @@
 <body>
   <div id="wrapper">
 
-<div class="section">
+<!-- <div class="section">
   <div class="chatter">Intro explainer</div>
-</div> 
+</div> --> 
 
 <!-- <div class="section">
 <div class="icon"><img src="img/electric.png" /></div>
@@ -123,7 +123,7 @@
 <div class="breaker"></div>
 </div>
 
-<div class="section">
+<!-- <div class="section">
 <div class="icon"><img src="img/acoustic2.png" /></div>
 <div class="title">Bruce Springsteen</div>
 <div class="date">2/29/2016</div>
@@ -251,7 +251,7 @@
   <li>Point 2</li>
   <li>Point 3</li>
 </div>
-<div class="breaker"></div>
+<div class="breaker"></div> -->
 </div>
 
   </div>
